--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">YourName</div>
+            <div class="logo">Simon Ngin</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -320,9 +320,9 @@
             <div class="about-content">
                 <div class="about-image">👨‍💻</div>
                 <div class="about-text">
-                    <p>I'm a passionate mobile application developer with 3.5 years of experience in the consulting space. My journey has taken me across diverse industries, where I've had the privilege of solving complex challenges and delivering innovative mobile solutions.</p>
-                    <p>Through my consulting work, I've developed a unique perspective on how different industries approach mobile technology. This cross-industry experience has equipped me with the versatility to adapt quickly to new domains and deliver solutions that truly meet business needs.</p>
-                    <p>I believe in creating mobile applications that are not only functional but also provide exceptional user experiences that drive real business value.</p>
+                    <p>Simon is a passionate mobile application developer with 3.5 years of experience in the consulting space. His journey has taken me across diverse industries, where he has had the privilege of solving complex challenges and delivering innovative mobile solutions.</p>
+                    <p>Through his consulting work, He has developed a unique perspective on how different industries approach mobile technology. This cross-industry experience has equipped me with the versatility to adapt quickly to new domains and deliver solutions that truly meet business needs.</p>
+                    <p>He believes in creating mobile applications that are not only functional but also provide exceptional user experiences that drive real business value.</p>
                 </div>
             </div>
         </section>
@@ -414,7 +414,7 @@
     </main>
 
     <footer class="container">
-        <p>&copy; 2025 Your Name. Crafted with passion for mobile development.</p>
+        <p>&copy; 2025 Simon Ngin. Crafted with passion for mobile development.</p>
     </footer>
 
     <script>
