--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+            .skills-grid,<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Mobile Application Developer</title>
+    <title>Simon Ngin - Mobile Application Developer</title>
     <style>
         * {
             margin: 0;
@@ -168,39 +168,7 @@
             line-height: 1.8;
         }
 
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2rem;
-            margin-top: 3rem;
-        }
 
-        .skill-category {
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            padding: 2rem;
-            border-radius: 15px;
-            text-align: center;
-            transition: transform 0.3s ease;
-        }
-
-        .skill-category:hover {
-            transform: translateY(-5px);
-        }
-
-        .skill-category h3 {
-            color: #333;
-            margin-bottom: 1rem;
-            font-size: 1.3rem;
-        }
-
-        .skill-category ul {
-            list-style: none;
-        }
-
-        .skill-category li {
-            padding: 0.5rem 0;
-            color: #555;
-        }
 
         .experience-grid {
             display: grid;
@@ -301,7 +269,7 @@
             <div class="logo">Simon Ngin</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
+
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -320,58 +288,14 @@
             <div class="about-content">
                 <div class="about-image">👨‍💻</div>
                 <div class="about-text">
-                    <p>Simon is a passionate mobile application developer with 3.5 years of experience in the consulting space. His journey has taken me across diverse industries, where he has had the privilege of solving complex challenges and delivering innovative mobile solutions.</p>
-                    <p>Through his consulting work, He has developed a unique perspective on how different industries approach mobile technology. This cross-industry experience has equipped me with the versatility to adapt quickly to new domains and deliver solutions that truly meet business needs.</p>
-                    <p>He believes in creating mobile applications that are not only functional but also provide exceptional user experiences that drive real business value.</p>
+                    <p>I'm a passionate mobile application developer with 3.5 years of experience in the consulting space. My journey has taken me across diverse industries, where I've had the privilege of solving complex challenges and delivering innovative mobile solutions.</p>
+                    <p>Through my consulting work, I've developed a unique perspective on how different industries approach mobile technology. This cross-industry experience has equipped me with the versatility to adapt quickly to new domains and deliver solutions that truly meet business needs.</p>
+                    <p>I believe in creating mobile applications that are not only functional but also provide exceptional user experiences that drive real business value.</p>
                 </div>
             </div>
         </section>
 
-        <section id="skills" class="section">
-            <h2>Technical Skills</h2>
-            <div class="skills-grid">
-                <div class="skill-category">
-                    <h3>Mobile Platforms</h3>
-                    <ul>
-                        <li>iOS Development</li>
-                        <li>Android Development</li>
-                        <li>Cross-platform Solutions</li>
-                        <li>React Native</li>
-                        <li>Flutter</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h3>Programming Languages</h3>
-                    <ul>
-                        <li>Swift</li>
-                        <li>Kotlin</li>
-                        <li>Java</li>
-                        <li>JavaScript/TypeScript</li>
-                        <li>Dart</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h3>Development Tools</h3>
-                    <ul>
-                        <li>Xcode</li>
-                        <li>Android Studio</li>
-                        <li>VS Code</li>
-                        <li>Git & Version Control</li>
-                        <li>CI/CD Pipelines</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h3>Backend & APIs</h3>
-                    <ul>
-                        <li>RESTful APIs</li>
-                        <li>GraphQL</li>
-                        <li>Firebase</li>
-                        <li>Cloud Services</li>
-                        <li>Database Integration</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+
 
         <section id="experience" class="section">
             <h2>Industry Experience</h2>
