updated contact details
updated email, linkedin, github

--- a/index.html
+++ b/index.html
@@ -328,10 +328,9 @@
             <div class="contact-content">
                 <p>I'm always interested in discussing new opportunities and innovative mobile projects. Let's connect and explore how we can work together!</p>
                 <div class="contact-links">
-                    <a href="mailto:your.email@example.com" class="contact-link">Email Me</a>
-                    <a href="https://linkedin.com/in/yourprofile" class="contact-link">LinkedIn</a>
-                    <a href="https://github.com/yourusername" class="contact-link">GitHub</a>
-                    <a href="tel:+1234567890" class="contact-link">Call Me</a>
+                    <a href="mailto:simonngin@hotmail.com" class="contact-link">Email Me</a>
+                    <a href="https://www.linkedin.com/in/nginsimon/" class="contact-link">LinkedIn</a>
+                    <a href="https://github.com/simonngin" class="contact-link">GitHub</a>
                 </div>
             </div>
         </section>
