updated experience descriptions

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-            .skills-grid,<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -303,22 +303,22 @@
                 <div class="experience-card">
                     <div class="experience-icon">🛒</div>
                     <h3>Retail</h3>
-                    <p>Developed customer-facing mobile applications with focus on seamless shopping experiences, inventory management, and payment integration.</p>
+                    <p>Developer on a customer-facing mobile application with focus on seamless shopping experiences and payment integration.</p>
                 </div>
                 <div class="experience-card">
                     <div class="experience-icon">💰</div>
                     <h3>Financial Services</h3>
-                    <p>Built secure financial applications with advanced encryption, compliance requirements, and real-time transaction processing.</p>
+                    <p>Developer on a secure financial application with compliance requirements, and real-time transaction processing.</p>
                 </div>
                 <div class="experience-card">
                     <div class="experience-icon">🏛️</div>
                     <h3>Government</h3>
-                    <p>Created citizen-focused mobile solutions emphasizing accessibility, security, and user-friendly interfaces for public services.</p>
+                    <p>Developer on a public-focused mobile solutions emphasizing accessibility, security, and user-friendly interfaces for public infrastructure (Airport).</p>
                 </div>
                 <div class="experience-card">
-                    <div class="experience-icon">🚊</div>
-                    <h3>Transport</h3>
-                    <p>Developed transportation apps with real-time tracking, route optimization, and integrated payment systems for enhanced user mobility.</p>
+                    <div class="experience-icon">🚗</div>
+                    <h3>Insurance</h3>
+                    <p>Developer on an insurance application with push notifications and membership services.</p>
                 </div>
             </div>
         </section>
