--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <div class="contact-content">
                 <p>I'm always interested in discussing new opportunities and innovative mobile projects. Let's connect and explore how we can work together!</p>
                 <div class="contact-links">
-                    <a href="mailto:simonngin@hotmail.com" class="contact-link">Email Me</a>
+                    <a href="mailto:develop.simonngin@gmail.com" class="contact-link">Email Me</a>
                     <a href="https://www.linkedin.com/in/nginsimon/" class="contact-link">LinkedIn</a>
                     <a href="https://github.com/simonngin" class="contact-link">GitHub</a>
                 </div>
