added bottom padding

--- a/pacer/index.html
+++ b/pacer/index.html
@@ -221,7 +221,7 @@
                     </div>
                 </div>
                 <div style="text-align: center; margin-top: 2rem;">
-                    <p style="color: #ccc; font-size: 1.1rem; max-width: 600px; margin: 0 auto;">
+                    <p style="color: #ccc; font-size: 1.1rem; max-width: 600px; margin: 0 auto; padding-bottom: 2rem;">
                         Pacer is built to be a no-frills, simple tool for pacing your runs. Pro features give you the flexibility to customize your training exactly how you want it.
                     </p>
                 </div>
