--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="logo">Simon Ngin</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-
+                <li><a href="#applications">Applications</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -286,7 +286,9 @@
         <section id="about" class="section">
             <h2>About Me</h2>
             <div class="about-content">
-                <div class="about-image">👨‍💻</div>
+                <div class="about-image">
+                    <img src="headshot.jpg" alt="Simon Ngin" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                </div>
                 <div class="about-text">
                     <p>I'm a passionate mobile application developer with 3.5 years of experience in the consulting space. My journey has taken me across diverse industries, where I've had the privilege of solving complex challenges and delivering innovative mobile solutions.</p>
                     <p>Through my consulting work, I've developed a unique perspective on how different industries approach mobile technology. This cross-industry experience has equipped me with the versatility to adapt quickly to new domains and deliver solutions that truly meet business needs.</p>
@@ -319,6 +321,22 @@
                     <div class="experience-icon">🚗</div>
                     <h3>Insurance</h3>
                     <p>Developer on an insurance application with push notifications and membership services.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="applications" class="section">
+            <h2>My Applications</h2>
+            <div class="experience-grid">
+                <div class="experience-card">
+                    <div class="experience-icon">
+                        <img src="pacer/app-icon.png" alt="Pacer App Icon" style="width: 60px; height: 60px; border-radius: 12px;">
+                    </div>
+                    <h3>Pacer</h3>
+                    <p>Your personal pace coach for running. Real-time pace tracking with smart audio coaching and a clean, simple interface.</p>
+                    <div style="margin-top: 1rem;">
+                        <a href="https://simonngin.github.io/pacer/" style="color: white; text-decoration: underline;">Visit Pacer</a>
+                    </div>
                 </div>
             </div>
         </section>
