updated title and removed a PacerApp instance

--- a/pacer/index.html
+++ b/pacer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pacer - Your Virtual Running Coach</title>
+    <title>Pacer</title>
     <style>
         * {
             margin: 0;
@@ -176,7 +176,7 @@
                 <img src="app-icon.png" alt="Pacer App Icon" class="app-icon">
                 <div class="logo">Pacer</div>
             </div>
-            <div class="tagline">Your Personal Pace Coach</div>
+            <div class="tagline">Your Virtual Pace Coach</div>
         </header>
 
         <section class="hero">
@@ -237,7 +237,7 @@
                 </a>
                 <a href="terms-of-service.html" class="link-card">
                     <h3>Terms of Service</h3>
-                    <p>Our terms and conditions for using PacerApp</p>
+                    <p>Our terms and conditions for using Pacer</p>
                 </a>
             </div>
         </section>
