update terms of service

--- a/pacer/index.html
+++ b/pacer/index.html
@@ -235,7 +235,7 @@
                     <h3>Privacy Policy</h3>
                     <p>Learn how we protect and handle your data</p>
                 </a>
-                <a href="terms-of-service.html" class="link-card">
+                <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" class="link-card">
                     <h3>Terms of Service</h3>
                     <p>Our terms and conditions for using Pacer</p>
                 </a>
