added time under tension

--- a/index.html
+++ b/index.html
@@ -338,6 +338,16 @@
                         <a href="https://simonngin.github.io/pacer/" style="color: white; text-decoration: underline;">Visit Pacer</a>
                     </div>
                 </div>
+                <div class="experience-card">
+                    <div class="experience-icon">
+                        <img src="timeundertension-website/images/appIcon.png" alt="TimeUnderTension App Icon" style="width: 60px; height: 60px; border-radius: 12px;">
+                    </div>
+                    <h3>TimeUnderTension</h3>
+                    <p>Master your tempo, maximize your gains. The first timer app designed specifically for time under tension training with precision timing and audio cues.</p>
+                    <div style="margin-top: 1rem;">
+                        <a href="https://simonngin.github.io/timeundertension-website/" style="color: white; text-decoration: underline;">Visit TimeUnderTension</a>
+                    </div>
+                </div>
             </div>
         </section>
 
