added daily brain

--- a/index.html
+++ b/index.html
@@ -348,6 +348,14 @@
                         <a href="https://simonngin.github.io/timeundertension/" style="color: white; text-decoration: underline;">Visit TimeUnderTension</a>
                     </div>
                 </div>
+                <div class="experience-card">
+                    <div class="experience-icon">🧠</div>
+                    <h3>The Daily Brain</h3>
+                    <p>Daily memory game challenges to build cognitive skills. Features 5 game types with progressive difficulty, streak tracking, and freemium monetization.</p>
+                    <div style="margin-top: 1rem;">
+                        <a href="https://simonngin.github.io/thedailybrain/" style="color: white; text-decoration: underline;">Visit The Daily Brain</a>
+                    </div>
+                </div>
             </div>
         </section>
 
