--- a/index.html
+++ b/index.html
@@ -349,7 +349,9 @@
                     </div>
                 </div>
                 <div class="experience-card">
-                    <div class="experience-icon">🧠</div>
+                    <div class="experience-icon">
+                        <img src="thedailybrain/images/appIcon.png" alt="The Daily Brain App Icon" style="width: 60px; height: 60px; border-radius: 12px;">
+                    </div>
                     <h3>The Daily Brain</h3>
                     <p>Daily memory game challenges to build cognitive skills. Features 5 game types with progressive difficulty, streak tracking, and freemium monetization.</p>
                     <div style="margin-top: 1rem;">
