--- a/thedailybrain/privacy.html
+++ b/thedailybrain/privacy.html
@@ -16,7 +16,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #1a1f2e 0%, #16213e 50%, #0f3460 100%);
+            background: white;
             min-height: 100vh;
         }
 
@@ -179,7 +179,6 @@
                 <img src="images/appIcon.png" alt="The Daily Brain App Icon">
                 The Daily Brain
             </div>
-            <a href="../" class="back-link">← Back to Portfolio</a>
         </nav>
     </header>
 
